Bug 258006 Mouse-wheel scroll events does not propagate to viewport from fixed pos. elements r+sr=roc